--- a/01_html/01-htmlpractice1.html
+++ b/01_html/01-htmlpractice1.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <style>
+    img {
+      width: 50px;
+      height: 50px;
+    }
+  </style>
+  <body>
     <h1>codingon cafe</h1>
     <ul>
-        <li><h2>아메리카노</h2></li>
-        아메리카노 - 2000원
-        <li><h2>카페라떼</h2></li>
-        카페라떼 - 3000원
-        <li><h2>토피넛라떼</h2></li>
-        토피넛라떼 - 2000원
+      <li><h2>아메리카노</h2></li>
+      아메리카노 - 2000원
+      <li><h2>카페라떼</h2></li>
+      카페라떼 - 3000원
+      <li><h2>토피넛라떼</h2></li>
+      토피넛라떼 - 2000원
     </ul>
-    <hr/>
-    <p>아메리카노 - <strong>시원한 음료가 마시고 싶다면!</strong>&emsp;<del>쓰다..</del></p>
-    <p>카페라뗴 - <strong>나는 달달한 음료가 좋아!</strong>&emsp;<del>비교적 달다..</del></p>
-    <p>토피넛라떼 - <strong>나는 달달하고 견과류가 좋아!</strong>&emsp;<del>견과류 맛 난다..</del></p>
-</body>
+    <hr />
+    <p>
+      아메리카노 - <strong>시원한 음료가 마시고 싶다면!</strong>&emsp;<del
+        >쓰다..</del
+      >
+    </p>
+    <p>
+      카페라뗴 - <strong>나는 달달한 음료가 좋아!</strong>&emsp;<del
+        >비교적 달다..</del
+      >
+    </p>
+    <p>
+      토피넛라떼 - <strong>나는 달달하고 견과류가 좋아!</strong>&emsp;<del
+        >견과류 맛 난다..</del
+      >
+    </p>
 </html>
