--- a/02_css/02-css_02.html
+++ b/02_css/02-css_02.html
@@ -23,5 +23,21 @@
     <!-- 가상 클래스 선택자 -->
     <a href="https://naver.com">Naver</a>
     <input type="text" />
+
+    <hr />
+    <div class="fruits">
+      <div>gd</div>
+      <span>딸기</span>
+      <span>수박</span>
+      <div>
+        오렌지
+        <div>하위 오렌지</div>
+      </div>
+      <p>망고</p>
+      <h3>사과</h3>
+    </div>
+    <!-- 속성 선택자 -->
+    <input type="text" value="읽기전용" readonly />
+    <input type="text" placeholder="안녕하세용" />
   </body>
 </html>
