코딩온 5일차

--- a/02_css/02-css_03.html
+++ b/02_css/02-css_03.html
@@ -56,5 +56,29 @@
       "
     ></div>
     <div style="height: 100px; line-height: 100px">안녕하세요</div>
+    <button>버튼</button>
+    <div style="border: 2px solid black; width: 200px; height: 200px"></div>
+    <!-- box sizing -->
+    <div class="container">
+      <div class="box2 content-box"></div>
+      <div class="box2 border-box"></div>
+    </div>
+    <!-- visibilty -->
+    <h4>visibilty</h4>
+    <div class="square">original</div>
+    <div class="square d-none">d-none</div>
+    <div class="square invisible">invisible</div>
+    <div class="square opacity-0">opacty-0</div>
+    <div class="square">original</div>
+
+    <!-- overflow -->
+    <div>overflow</div>
+    <div class="square scroll">Lorem i</div>
+    <div class="square auto">
+      Lorem ipsumdolorsit amet consectetur adipisicing elit. Delectus, aliquid
+      quae eum cum unde ullam, ipsam quasi voluptates ea, quisquam sapiente
+      inventore atque? Inventore cumque error aliquid explicabo dignissimos
+      eius.
+    </div>
   </body>
 </html>
