--- a/02_css/02-css_practice_03.html
+++ b/02_css/02-css_practice_03.html
@@ -12,7 +12,7 @@
     />
     <title>css03연습</title>
   </head>
-  <body style="background-color: blanchedalmond">
+  <body>
     <!-- <p class="google">
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur
       inventore voluptates soluta sapiente aliquid ut temporibus, omnis
@@ -29,7 +29,7 @@
       <div>CSS</div>
       <div>JavaScript</div>
     </div> -->
-    <div
+    <!-- <div
       style="
         width: 10vw;
         height: 10vw;
@@ -41,6 +41,12 @@
       "
     >
       KDT
+    </div> -->
+    <div class="border"></div>
+    <div style="display: flex; gap: 10px">
+      <div class="contentbox">content</div>
+      <div class="borderbox">border</div>
     </div>
+    <div class="display"></div>
   </body>
 </html>
