--- a/08_async/index_prac.html
+++ b/08_async/index_prac.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- <script src="./index.js"></script> -->
-    <!-- <script src="./index2.js"></script> -->
-    <script src="./index3.js"></script>
+    <script src="./async_prac.js"></script>
   </head>
   <body></body>
 </html>
